[package]
name = "qsign-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
unicorn-engine = { path = "unicorn", version="2.0.2", features = ["arch_aarch64"] }
capstone = "0.12.0"
anyhow = "1.0.86"
keystone-engine = { version = "0.1.0", features = ["build-from-src"] }
hex = { version = "0.4.3", features = ["default"] }
bytes = "1.6.0"
log = "0.4.22"
env_logger = "0.11.3"
byteorder = "1.5.0"
hashbag = "0.1.12"